--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="android.abhik.popularmovies" >
-
+    <uses-sdk android:minSdkVersion="22" android:targetSdkVersion="22"></uses-sdk>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
         android:name="android.permission.READ_SYNC_SETTINGS"/>
